Updated POM.xml files